# Rogue

./: .gitignore  CMakeLists.txt  README.md  makefile
include/: base.h  shaderprogram.h
include/GL/: glfw.h
src/: glew.c  main.cpp  makefile  shaderprogram.cpp
src/shaders/: base.frag
